@@ -2208,7 +2208,7 @@ fill_envp_buf_i(st_data_t st_key, st_data_t st_val, st_data_t arg)
 static long run_exec_dup2_tmpbuf_size(long n);
 
 void
-rb_execarg_fixup(VALUE execarg_obj)
+rb_execarg_parent_start(VALUE execarg_obj)
 {
     struct rb_execarg *eargp = rb_execarg_get(execarg_obj);
     int unsetenv_others;
@@ -2370,7 +2370,7 @@ rb_f_exec(int argc, const VALUE *argv)
 
     execarg_obj = rb_execarg_new(argc, argv, TRUE);
     eargp = rb_execarg_get(execarg_obj);
-    rb_execarg_fixup(execarg_obj);
+    rb_execarg_parent_start(execarg_obj);
     fail_str = eargp->use_shell ? eargp->invoke.sh.shell_script : eargp->invoke.cmd.command_name;
 
 #if defined(__APPLE__) || defined(__HAIKU__)
@@ -3846,7 +3846,7 @@ rb_spawn_internal(int argc, const VALUE *argv, char *errmsg, size_t errmsg_bufle
 
     execarg_obj = rb_execarg_new(argc, argv, TRUE);
     eargp = rb_execarg_get(execarg_obj);
-    rb_execarg_fixup(execarg_obj);
+    rb_execarg_parent_start(execarg_obj);
     ret = rb_spawn_process(eargp, errmsg, errmsg_buflen);
     RB_GC_GUARD(execarg_obj);
     return ret;
@@ -4211,7 +4211,7 @@ rb_f_spawn(int argc, VALUE *argv)
 
     execarg_obj = rb_execarg_new(argc, argv, TRUE);
     eargp = rb_execarg_get(execarg_obj);
-    rb_execarg_fixup(execarg_obj);
+    rb_execarg_parent_start(execarg_obj);
     fail_str = eargp->use_shell ? eargp->invoke.sh.shell_script : eargp->invoke.cmd.command_name;
 
     pid = rb_spawn_process(eargp, errmsg, sizeof(errmsg));
